force-app/main/default/objects/Certification__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Administrator</fullName><default>true</default><label>Administrator</label></value>
            <value><fullName>Developer</fullName><default>false</default><label>Developer</label></value>
            <value><fullName>Architect</fullName><default>false</default><label>Architect</label></value>
            <value><fullName>Consultant</fullName><default>false</default><label>Consultant</label></value>
            <value><fullName>Analyst</fullName><default>false</default><label>Analyst</label></value>
            <value><fullName>Marketer</fullName><default>false</default><label>Marketer</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>