force-app/main/default/objects/Certification__c/fields/Certification_Code__c.field-meta.xml
<CustomField>
    <fullName>Certification_Code__c</fullName>
    <externalId>true</externalId>
    <label>Certification Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <description>Internal unique key for this certification, e.g. SLACK-ADMIN-201. Used as the upsert key when re-importing certification data.</description>
</CustomField>