force-app/main/default/objects/Certification__c/fields/Exam_Code__c.field-meta.xml
<CustomField>
    <fullName>Exam_Code__c</fullName>
    <label>Exam Code</label>
    <length>100</length>
    <type>Text</type>
    <description>Official exam code or name provided by the vendor, e.g. Slack-Admin 201.</description>
</CustomField>