force-app/main/default/objects/Certification__c/fields/Exam_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Exam_Duration_Minutes__c</fullName>
    <label>Exam Duration (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>