force-app/main/default/objects/Certification__c/fields/Last_Synced_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced_Date__c</fullName>
    <label>Last Synced Date</label>
    <type>Date</type>
</CustomField>