force-app/main/default/objects/Certification__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Foundational</fullName><default>false</default><label>Foundational</label></value>
            <value><fullName>Associate</fullName><default>false</default><label>Associate</label></value>
            <value><fullName>Professional</fullName><default>true</default><label>Professional</label></value>
            <value><fullName>Expert</fullName><default>false</default><label>Expert</label></value>
            <value><fullName>Specialist</fullName><default>false</default><label>Specialist</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>