force-app/main/default/objects/Certification__c/fields/Number_Of_Questions_On_Exam__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Questions_On_Exam__c</fullName>
    <label>Number of Questions on Exam</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Official number of questions presented in a real exam attempt, distinct from the total size of the practice question bank.</description>
</CustomField>