force-app/main/default/objects/Certification__c/fields/Passing_Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score_Percent__c</fullName>
    <label>Passing Score (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>