force-app/main/default/objects/Certification__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Salesforce</fullName><default>false</default><label>Salesforce</label></value>
            <value><fullName>Slack</fullName><default>false</default><label>Slack</label></value>
            <value><fullName>AWS</fullName><default>false</default><label>AWS</label></value>
            <value><fullName>Microsoft</fullName><default>false</default><label>Microsoft</label></value>
            <value><fullName>Google</fullName><default>false</default><label>Google</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Vendor or organization issuing the certification. Non-restricted picklist so new providers can be added without a metadata deploy.</description>
</CustomField>