force-app/main/default/objects/Certification__c/fields/Source_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Document_Name__c</fullName>
    <label>Source Document Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Filename of the original source document, e.g. a PDF dump, that this certification question bank was imported from.</description>
</CustomField>