force-app/main/default/objects/Certification__c/fields/Total_Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Question_Count__c</fullName>
    <label>Total Question Count</label>
    <summaryForeignKey>Certification_Question__c.Certification__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
    <description>Roll-up count of related Certification Question records; the size of the practice question bank actually loaded for this certification.</description>
</CustomField>