force-app/main/default/objects/Certification__c/fields/Vendor_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Website_URL__c</fullName>
    <label>Vendor Website URL</label>
    <type>Url</type>
</CustomField>