force-app/main/default/objects/Certification__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
    <description>Exam or question-bank version string, e.g. 20.0.</description>
</CustomField>